--- a/practice/about.html
+++ b/practice/about.html
@@ -16,6 +16,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="style2.css">
     </head>
 
     <body>
@@ -54,19 +55,25 @@
                 </li>
               </ul>
             </div>
+        <div class="text-light bg-danger text-center p-5 display-2 fw-bold ">About us</div>
+        <div class="row">
+          <div class="col display-4 text-center pt-5 fw-bold">Why Shop With Us</div>
         </div>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
+        <div class="row pt-5 justify-content-around h-25 align-item-center">
+          <div id="firstcard"  class="col-md-2 pr-2 bg-dark text-light rounded-3 text-center pt-4">
+            <h2>Fast Dilevery</h2>
+            <p>variations of passages of Lorem Ipsum available</p>
+          </div>
+          <div id="second card" class="col-md-2 pl-2 bg-dark text-light rounded-3 text-center pt-4">
+            <h2>Free Shipping</h2>
+            <p>variations of passages of Lorem Ipsum available</p>
+          </div>
+          <div class="col-md-2 bg-dark text-light p-2 rounded-3 text-center pt-4">
+            <h2 class="text-capitalize">best quality</h2>
+            <p>variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
 
