--- a/practice/about.html
+++ b/practice/about.html
@@ -55,7 +55,7 @@
                 </li>
               </ul>
             </div>
-        <div class="text-light bg-danger text-center p-5 display-2 fw-bold ">About us</div>
+        <div class="text-light bg-danger text-center p-5 display-4 fw-bold ">About us</div>
         <div class="row">
           <div class="col display-4 text-center pt-5 fw-bold">Why Shop With Us</div>
         </div>
@@ -71,6 +71,31 @@
           <div class="col-md-2 bg-dark text-light p-2 rounded-3 text-center pt-4">
             <h2 class="text-capitalize">best quality</h2>
             <p>variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div id="img" class="col align-content-center text-center w-50">
+              <h2 class="text-capitalize display-4 fw-bold">#new arrival</h2>
+              <div class="mx-auto w-25">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt numquam odio, eveniet in autem accusantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis itaque porro molestiae voluptas iure sit magni ab iste quo hic?</div>
+          </div>
+        </div><br/>
+        <div class="row mt-5 mb-5 bg-primary text-light">
+          <div class="col-md-2 offset-2">
+            <h1>Reach at..</h1>
+            <ul class="list-unstyled mt-4">
+              <li class="p-2">location</li>
+              <li class="p-2">call +01148249343</li>
+              <li class="p-2">demo@gmail.com</li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h1>Famms</h1>
+            <p>Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with</p>
+          </div>
+          <hr class="w-50 mx-auto">
+          <div class="text-center">
+            © 2024 All Rights Reserved By Free Html Templates <br/>
+            Distributed By ThemeWagon
           </div>
         </div>
       </div>
