--- a/practice/about.html
+++ b/practice/about.html
@@ -74,12 +74,12 @@
           </div>
         </div>
         <div class="row mt-5">
-          <div id="img" class="col align-content-center text-center w-50">
+          <div id="img" class="col align-content-center text-center w-50 mb-0">
               <h2 class="text-capitalize display-4 fw-bold">#new arrival</h2>
               <div class="mx-auto w-25">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt numquam odio, eveniet in autem accusantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis itaque porro molestiae voluptas iure sit magni ab iste quo hic?</div>
           </div>
         </div><br/>
-        <div class="row mt-5 mb-5 bg-primary text-light">
+        <div id="footer" class="row pt-5 pb-5 text-light">
           <div class="col-md-2 offset-2">
             <h1>Reach at..</h1>
             <ul class="list-unstyled mt-4">
