--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -34,17 +34,17 @@
               <a href="" class="nav-link text-dark"><b>Home</b></a>
             </div>
           </li>
-          <div class="dropdown">
-              <div class="btn dropdown-toggle" id="dropdown" type="button" data-toggle="dropdown">
-                <button href="" class="nav-link text-dark icon-link-hover"
-                  ><b>Pages</b></button
-                >
-              </div>
-              <ul class="dropdown-menu" aria-labelledby="dropdown">
-                <li><a href="about.html" class="dropdown-item">About</a></li>
-                <li><a href="#" class="dropdown-item"></a></li>
-              </ul>
-          </div>
+          <li class="nav-item pt-2">
+          <a
+          href=""
+          class="btn dropdown-toggle"
+          data-toggle="dropdown"
+          ><b>Pages</b></a>
+            <ul class="dropdown-menu mx-auto" aria-labelledby="dropdownMenuButton1">
+              <a href="about.html" class="dropdown-item">About</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </ul>
+          </li>
           <li class="nav-item">
             <div class="btn">
               <a href="" class="nav-link text-dark"><b>Product</b></a>
