--- a/practice/about.html
+++ b/practice/about.html
@@ -28,7 +28,7 @@
             <ul class="navbar-nav mx-auto w-50">
                 <li class="nav-item">
                   <div class="btn">
-                    <a href="" class="nav-link text-dark"><b>Home</b></a>
+                    <a href="bootstrap.html" class="nav-link text-dark"><b>Home</b></a>
                   </div>
                 </li>
                 <li class="nav-item">
