--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </div>
-      <div class="row mh-100 align-content-center" style="height: 500px">
+      <div id="bgimg" class="row mh-100 align-content-start mt-5" style="height: 950px">
         <div class="col-md-8 text-center ml-5">
           <div
             id="carouselExampleControl"
@@ -142,6 +142,42 @@
                 <span class="sr-only">next</span>
               </a>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col display-4 text-center pt-5 fw-bold">Why Shop With Us</div>
+      </div>
+      <div class="row pt-5 justify-content-around h-25 align-item-center">
+        <div id="firstcard"  class="col-md-2 pr-2 bg-dark text-light rounded-3 text-center pt-4">
+          <h2>Fast Dilevery</h2>
+          <p>variations of passages of Lorem Ipsum available</p>
+        </div>
+        <div id="second card" class="col-md-2 pl-2 bg-dark text-light rounded-3 text-center pt-4">
+          <h2>Free Shipping</h2>
+          <p>variations of passages of Lorem Ipsum available</p>
+        </div>
+        <div class="col-md-2 bg-dark text-light p-2 rounded-3 text-center pt-4">
+          <h2 class="text-capitalize">best quality</h2>
+          <p>variations of passages of Lorem Ipsum available</p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div id="img" class="col align-content-center text-center w-50 mb-0">
+            <h2 class="text-capitalize display-4 fw-bold">#new arrival</h2>
+            <div class="mx-auto w-25">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt numquam odio, eveniet in autem accusantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis itaque porro molestiae voluptas iure sit magni ab iste quo hic?</div>
+            <button class="btn btn-danger text-light mt-4">Shop Now</button>
+        </div>
+      </div><br/>
+      <div class="row mt-5">
+        <div id="subscribe" class="col" style="height: 350px;">
+          <h1 class="text-capitalize text-center pt-5 mt-2">subscribe to get discount offers</h1>
+          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, accusantium?</p>
+          <div class="text-center rounded-pill">
+            <input type="email" class="w-50 p-3 rounded-pill text-capitalize mt-3" placeholder="enter your email">
+          </div>
+          <div class="text-center mt-5">
+            <button id="subs" class="btn btn-danger rounded-pill text-uppercase" style="width: 350px;"><b>subscribe</b></button>
           </div>
         </div>
       </div>
