--- a/practice/about.html
+++ b/practice/about.html
@@ -77,6 +77,7 @@
           <div id="img" class="col align-content-center text-center w-50 mb-0">
               <h2 class="text-capitalize display-4 fw-bold">#new arrival</h2>
               <div class="mx-auto w-25">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt numquam odio, eveniet in autem accusantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis itaque porro molestiae voluptas iure sit magni ab iste quo hic?</div>
+              <button class="btn btn-danger text-light mt-4">Shop Now</button>
           </div>
         </div><br/>
         <div id="footer" class="row pt-5 pb-5 text-light">
