--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -177,7 +177,7 @@
             <input type="email" class="w-50 p-3 rounded-pill text-capitalize mt-3" placeholder="enter your email">
           </div>
           <div class="text-center mt-5">
-            <button id="subs" class="btn btn-danger rounded-pill text-uppercase" style="width: 350px;"><b>subscribe</b></button>
+            <button id="subs" class="btn btn-danger rounded-pill text-uppercase p-2" style="width: 350px;"><b>subscribe</b></button>
           </div>
         </div>
       </div>
