--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col display-4 text-center pt-5 fw-bold">Why Shop With Us</div>
+        <div class="col display-4 text-center fw-bold">Why Shop With Us</div>
       </div>
       <div class="row pt-5 justify-content-around h-25 align-item-center">
         <div id="firstcard"  class="col-md-2 pr-2 bg-dark text-light rounded-3 text-center pt-4">
