--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -42,7 +42,7 @@
           ><b>Pages</b></a>
             <ul class="dropdown-menu mx-auto" aria-labelledby="dropdownMenuButton1">
               <a href="about.html" class="dropdown-item">About</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="testimonial.html">Testimonial</a>
             </ul>
           </li>
           <li class="nav-item">
