--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -16,6 +16,7 @@
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"
     ></script>
+    
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
       integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
@@ -178,6 +179,92 @@
           </div>
           <div class="text-center mt-5">
             <button id="subs" class="btn btn-danger rounded-pill text-uppercase p-2" style="width: 350px;"><b>subscribe</b></button>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col text-center">
+          <div class="carousel slide" id="carouselExample" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://themewagon.github.io/famms/images/client.jpg" alt="" style="height: 150px;" class="rounded-circle mt-4">
+                <h1 class="text-center">Anna Trevor</h1>
+                <p class="w-50 mx-auto text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam beatae animi assumenda ducimus quae sunt quo est, enim
+                  perspiciatis quaerat ipsam in corrupti minus iure omnis rerum
+                  nemo natus exercitationem. Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="carousel-item">
+                <img src="https://themewagon.github.io/famms/images/client.jpg" alt="" style="height: 150px;" class="rounded-circle mt-4">
+                <h1 class="text-center">Anna Trevor</h1>
+                <p class="w-50 mx-auto text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam beatae animi assumenda ducimus quae sunt quo est, enim
+                  perspiciatis quaerat ipsam in corrupti minus iure omnis rerum
+                  nemo natus exercitationem. Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="carousel-item">
+                <img src="https://themewagon.github.io/famms/images/client.jpg" alt="" style="height: 150px;" class="rounded-circle mt-4">
+                <h1 class="text-center">Anna Trevor</h1>
+                <p class="w-50 mx-auto text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam beatae animi assumenda ducimus quae sunt quo est, enim
+                  perspiciatis quaerat ipsam in corrupti minus iure omnis rerum
+                  nemo natus exercitationem. Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+              <a href="#carouselExample" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">previous</span>
+              </a>
+              <a href="#carouselExampleControl" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5 bg-light pt-4 justify-content-center" style="height: 300px;">
+        <div class="col-md-2">
+          <img src="logo.png" height="40px" width="240px" class=""><br>
+          <p class="mt-4"><b>Address: </b> 28 White tower, Street Name New York City, USA</p>
+          <p class="mt-3"><b>Telephone :</b>+91 987 654 3210</p>
+          <p class="mt-3"><b>Email: </b>yourmain@gmail.com</p>
+        </div>
+        <div class="col-md-2">
+          <h4 class="ml-4">Menu</h4>
+          <ul>
+            <li class="list-unstyled"><a href="bootstrap.html" class="text-dark">Home</a></li>
+            <li class="list-unstyled"><a href="about.html" class="text-dark">About</a></li>
+            <li class="list-unstyled">Services</li>
+            <li class="list-unstyled"><a href="testimonial.html" class="text-dark">Testimonial</a></li>
+            <li class="list-unstyled"><a href="blog.html" class="text-dark">Blog</a></li>
+            <li class="list-unstyled"><a href="contact.html" class="text-dark">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4 class="ml-4">Account</h4>
+          <ul>
+            <li class="list-unstyled">Account</li>
+            <li class="list-unstyled">Checkout</li>
+            <li class="list-unstyled">LogIn</li>
+            <li class="list-unstyled">Register</li>
+            <li class="list-unstyled">Shopping</li>
+            <li class="list-unstyled">Widget</li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4 class="">NewsLetter</h4>
+          <div>
+            <input type="email" placeholder="Enter Your Mail" class="p-2 mt-3">
+            <p class="btn btn-danger">Subscribe</p>
           </div>
         </div>
       </div>
