--- a/practice/testimonial.html
+++ b/practice/testimonial.html
@@ -11,11 +11,22 @@
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+      integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+      integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style3.css">
   </head>
 
   <body>
@@ -27,7 +38,7 @@
         <ul class="navbar-nav mx-auto w-50">
           <li class="nav-item">
             <div class="btn">
-              <a href="" class="nav-link text-dark"><b>Home</b></a>
+              <a href="bootstrap.html" class="nav-link text-dark"><b>Home</b></a>
             </div>
           </li>
           <li class="nav-item pt-2">
@@ -41,7 +52,101 @@
               <a href="testimonial.html" class="dropdown-item">Testimonial</a>
             </ul>
           </li>
+          <li class="nav-item">
+            <div class="btn">
+              <a href="" class="nav-link text-dark"><b>Product</b></a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="btn">
+              <a href="" class="nav-link text-dark"><b>Blog</b></a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="btn">
+              <a href="" class="nav-link text-dark"><b>Contact</b></a>
+            </div>
+          </li>
         </ul>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h1 class="fw-bold text-center p-5 bg-danger text-light display-4">Testimonial</h1>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <h1 class="display-4 text-capitalize fw-bold text-center mt-4">customer's testimonial</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          <div class="carousel slide" id="carouselExample" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://themewagon.github.io/famms/images/client.jpg" alt="" style="height: 150px;" class="rounded-circle mt-4">
+                <h1 class="text-center">Anna Trevor</h1>
+                <p class="w-50 mx-auto text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam beatae animi assumenda ducimus quae sunt quo est, enim
+                  perspiciatis quaerat ipsam in corrupti minus iure omnis rerum
+                  nemo natus exercitationem. Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="carousel-item">
+                <img src="https://themewagon.github.io/famms/images/client.jpg" alt="" style="height: 150px;" class="rounded-circle mt-4">
+                <h1 class="text-center">Anna Trevor</h1>
+                <p class="w-50 mx-auto text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam beatae animi assumenda ducimus quae sunt quo est, enim
+                  perspiciatis quaerat ipsam in corrupti minus iure omnis rerum
+                  nemo natus exercitationem. Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="carousel-item">
+                <img src="https://themewagon.github.io/famms/images/client.jpg" alt="" style="height: 150px;" class="rounded-circle mt-4">
+                <h1 class="text-center">Anna Trevor</h1>
+                <p class="w-50 mx-auto text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Magnam beatae animi assumenda ducimus quae sunt quo est, enim
+                  perspiciatis quaerat ipsam in corrupti minus iure omnis rerum
+                  nemo natus exercitationem. Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+              <a href="#carouselExample" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">previous</span>
+              </a>
+              <a href="#carouselExampleControl" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="footer" class="row pt-5 pb-5 text-light mt-5">
+        <div class="col-md-2 offset-2">
+          <h1>Reach at..</h1>
+          <ul class="list-unstyled mt-4">
+            <li class="p-2">location</li>
+            <li class="p-2">call +01148249343</li>
+            <li class="p-2">demo@gmail.com</li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h1>Famms</h1>
+          <p>Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with</p>
+        </div>
+        <hr class="w-50 mx-auto">
+        <div class="text-center">
+          © 2024 All Rights Reserved By Free Html Templates <br/>
+          Distributed By ThemeWagon
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
