--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -241,12 +241,12 @@
         <div class="col-md-2">
           <h4 class="ml-4">Menu</h4>
           <ul>
-            <li class="list-unstyled"><a href="bootstrap.html" class="text-dark">Home</a></li>
-            <li class="list-unstyled"><a href="about.html" class="text-dark">About</a></li>
+            <li class="list-unstyled"><a href="bootstrap.html" class="text-dark text-decoration-none">Home</a></li>
+            <li class="list-unstyled"><a href="about.html" class="text-dark text-decoration-none">About</a></li>
             <li class="list-unstyled">Services</li>
-            <li class="list-unstyled"><a href="testimonial.html" class="text-dark">Testimonial</a></li>
-            <li class="list-unstyled"><a href="blog.html" class="text-dark">Blog</a></li>
-            <li class="list-unstyled"><a href="contact.html" class="text-dark">Contact</a></li>
+            <li class="list-unstyled"><a href="testimonial.html" class="text-dark text-decoration-none">Testimonial</a></li>
+            <li class="list-unstyled"><a href="blog.html" class="text-dark text-decoration-none">Blog</a></li>
+            <li class="list-unstyled"><a href="contact.html" class="text-dark text-decoration-none">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-2">
