--- a/practice/blog.html
+++ b/practice/blog.html
@@ -16,9 +16,103 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="style4.css">
     </head>
 
     <body>
-        .hello
+        <div class="container-fluid">
+            <div class="navbar bg-light navbar-expand-md p-3">
+                <div class="navbar-brand mx-auto">
+                  <img src="logo.png" alt="" height="40px" width="240px" />
+                </div>
+                <ul class="navbar-nav mx-auto w-50">
+                  <li class="nav-item">
+                    <div class="btn">
+                      <a href="bootstrap.html" class="nav-link text-dark"><b>Home</b></a>
+                    </div>
+                  </li>
+                  <li class="nav-item pt-2">
+                  <a
+                  href=""
+                  class="btn dropdown-toggle"
+                  data-toggle="dropdown"
+                  ><b>Pages</b></a>
+                    <ul class="dropdown-menu mx-auto" aria-labelledby="dropdownMenuButton1">
+                      <a href="about.html" class="dropdown-item">About</a>
+                      <a class="dropdown-item" href="testimonial.html">Testimonial</a>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <div class="btn">
+                      <a href="" class="nav-link text-dark"><b>Product</b></a>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <div class="btn">
+                      <a href="" class="nav-link text-dark"><b>Blog</b></a>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <div class="btn">
+                      <a href="" class="nav-link text-dark"><b>Contact</b></a>
+                    </div>
+                  </li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <h1 class="bg-danger text-light fw-bold display-4 p-4">Blog List</h1>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <h1 class="display-4 fw-bold">Why Shop With Us</h1>
+                </div>
+            </div>
+            <div class="row mt-5 justify-content-center">
+                <div id="firstcard" class="col-md-3 text-center text-light p-5 rounded-4">
+                    <h4>Fast Delivery</h4>
+                    <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor.</p>
+                </div>
+                <div id="secondcard" class="col-md-3 text-center text-light mx-4 p-5 rounded-4">
+                    <h4>Free Shipping</h4>
+                    <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor</p>
+                </div>
+                <div id="thirdcard" class="col-md-3 text-center text-light p-5 rounded-4">
+                    <h4>Best Quality</h4>
+                    <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor.</p>
+                </div>
+            </div>
+            <div id="footer" class="row pt-5 pb-5 mt-5 text-light">
+                <div class="col-md-2 offset-2">
+                  <h1>Reach at..</h1>
+                  <ul class="list-unstyled mt-4">
+                    <li class="p-2">location</li>
+                    <li class="p-2">call +01148249343</li>
+                    <li class="p-2">demo@gmail.com</li>
+                  </ul>
+                </div>
+                <div class="col-md-3">
+                  <h1>Famms</h1>
+                  <p>Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with</p>
+                </div>
+                <hr class="w-50 mx-auto">
+                <div class="text-center pb-5">
+                  © 2024 All Rights Reserved By Free Html Templates <br/>
+                  Distributed By ThemeWagon
+                </div>
+            </div>
+        </div>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+        ></script>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
