--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -53,7 +53,7 @@
           </li>
           <li class="nav-item">
             <div class="btn">
-              <a href="" class="nav-link text-dark"><b>Blog</b></a>
+              <a href="blog.html" class="nav-link text-dark"><b>Blog</b></a>
             </div>
           </li>
           <li class="nav-item">
