--- a/practice/about.html
+++ b/practice/about.html
@@ -45,7 +45,7 @@
                 </li>
                 <li class="nav-item">
                   <div class="btn">
-                    <a href="" class="nav-link text-dark"><b>Blog</b></a>
+                    <a href="blog.html" class="nav-link text-dark"><b>Blog</b></a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -59,18 +59,18 @@
         <div class="row">
           <div class="col display-4 text-center pt-5 fw-bold">Why Shop With Us</div>
         </div>
-        <div class="row pt-5 justify-content-around h-25 align-item-center">
-          <div id="firstcard"  class="col-md-2 pr-2 bg-dark text-light rounded-3 text-center pt-4">
-            <h2>Fast Dilevery</h2>
-            <p>variations of passages of Lorem Ipsum available</p>
+        <div class="row mt-5 justify-content-center">
+          <div id="firstcard" class="col-md-3 text-center text-light p-5 rounded-4">
+              <h4>Fast Delivery</h4>
+              <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor.</p>
           </div>
-          <div id="second card" class="col-md-2 pl-2 bg-dark text-light rounded-3 text-center pt-4">
-            <h2>Free Shipping</h2>
-            <p>variations of passages of Lorem Ipsum available</p>
+          <div id="secondcard" class="col-md-3 text-center text-light mx-4 p-5 rounded-4">
+              <h4>Free Shipping</h4>
+              <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor</p>
           </div>
-          <div class="col-md-2 bg-dark text-light p-2 rounded-3 text-center pt-4">
-            <h2 class="text-capitalize">best quality</h2>
-            <p>variations of passages of Lorem Ipsum available</p>
+          <div id="thirdcard" class="col-md-3 text-center text-light p-5 rounded-4">
+              <h4>Best Quality</h4>
+              <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor.</p>
           </div>
         </div>
         <div class="row mt-5">
