--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -149,18 +149,18 @@
       <div class="row">
         <div class="col display-4 text-center fw-bold">Why Shop With Us</div>
       </div>
-      <div class="row pt-5 justify-content-around h-25 align-item-center">
-        <div id="firstcard"  class="col-md-2 pr-2 bg-dark text-light rounded-3 text-center pt-4">
-          <h2>Fast Dilevery</h2>
-          <p>variations of passages of Lorem Ipsum available</p>
+      <div class="row mt-5 justify-content-center">
+        <div id="firstcard" class="col-md-3 text-center text-light p-5 rounded-4">
+          <h4>Fast Delivery</h4>
+          <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor.</p>
         </div>
-        <div id="second card" class="col-md-2 pl-2 bg-dark text-light rounded-3 text-center pt-4">
-          <h2>Free Shipping</h2>
-          <p>variations of passages of Lorem Ipsum available</p>
+        <div id="secondcard" class="col-md-3 text-center text-light mx-4 p-5 rounded-4">
+          <h4>Free Shipping</h4>
+          <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor</p>
         </div>
-        <div class="col-md-2 bg-dark text-light p-2 rounded-3 text-center pt-4">
-          <h2 class="text-capitalize">best quality</h2>
-          <p>variations of passages of Lorem Ipsum available</p>
+        <div id="thirdcard" class="col-md-3 text-center text-light p-5 rounded-4">
+          <h4>Best Quality</h4>
+          <p class="pt-2">variations of passages of Lorem Ipsum available Lorem, ipsum dolor.</p>
         </div>
       </div>
       <div class="row mt-5">
@@ -266,6 +266,12 @@
             <input type="email" placeholder="Enter Your Mail" class="p-2 mt-3">
             <p class="btn btn-danger">Subscribe</p>
           </div>
+        </div>
+      </div>
+      <div class="row bg-dark text-light pt-3">
+        <div class="col text-center">
+          <p>© 2021 All Rights Reserved By <span class="text-danger">Free Html Template</span><br/>
+          Distributed By <span class="text-danger">ThemeWagon</span></p>
         </div>
       </div>
     </div>
