--- a/practice/contact.html
+++ b/practice/contact.html
@@ -28,7 +28,7 @@
                 <ul class="navbar-nav mx-auto w-50">
                   <li class="nav-item">
                     <div class="btn">
-                      <a href="" class="nav-link text-dark"><b>Home</b></a>
+                      <a href="bootstrap.html" class="nav-link text-dark"><b>Home</b></a>
                     </div>
                   </li>
                   <li class="nav-item pt-2">
@@ -44,7 +44,7 @@
                   </li>
                   <li class="nav-item">
                     <div class="btn">
-                      <a href="" class="nav-link text-dark"><b>Product</b></a>
+                      <a href="product.html" class="nav-link text-dark"><b>Product</b></a>
                     </div>
                   </li>
                   <li class="nav-item">
@@ -54,7 +54,7 @@
                   </li>
                   <li class="nav-item">
                     <div class="btn">
-                      <a href="" class="nav-link text-dark"><b>Contact</b></a>
+                      <a href="contact.html" class="nav-link text-dark"><b>Contact</b></a>
                     </div>
                   </li>
                 </ul>
@@ -94,8 +94,34 @@
             </div>
             <div class="row mt-5">
                 <div class="col text-center">
-                    <button id="submit" class="px-5 py-2 bg-dark text-light fw-bold">Submit</button>
+                    <button id="submit" class="btn btn-dark px-5 py-2 text-light fw-bold">Submit</button>
                 </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div id="img" class="col align-content-center text-center w-50 mb-0">
+                <h2 class="text-capitalize display-4 fw-bold">#new arrival</h2>
+                <div class="mx-auto w-25 text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt numquam odio, eveniet in autem accusantium Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis itaque porro molestiae voluptas iure sit magni ab iste quo hic?</div>
+                <button class="btn btn-danger text-light mt-4">Shop Now</button>
+            </div>
+        </div>
+        <div id="footer" class="row pt-5 pb-5 text-light">
+            <div class="col-md-2 offset-2">
+              <h1>Reach at..</h1>
+              <ul class="list-unstyled mt-4">
+                <li class="p-2">location</li>
+                <li class="p-2">call +01148249343</li>
+                <li class="p-2">demo@gmail.com</li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h1>Famms</h1>
+              <p>Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with</p>
+            </div>
+            <hr class="w-50 mx-auto">
+            <div class="text-center">
+              © 2024 All Rights Reserved By Free Html Templates <br/>
+              Distributed By ThemeWagon
             </div>
         </div>
         <script
