--- a/practice/blog.html
+++ b/practice/blog.html
@@ -44,17 +44,17 @@
                   </li>
                   <li class="nav-item">
                     <div class="btn">
-                      <a href="" class="nav-link text-dark"><b>Product</b></a>
+                      <a href="product.html" class="nav-link text-dark"><b>Product</b></a>
                     </div>
                   </li>
                   <li class="nav-item">
                     <div class="btn">
-                      <a href="" class="nav-link text-dark"><b>Blog</b></a>
+                      <a href="blog.html" class="nav-link text-dark"><b>Blog</b></a>
                     </div>
                   </li>
                   <li class="nav-item">
                     <div class="btn">
-                      <a href="" class="nav-link text-dark"><b>Contact</b></a>
+                      <a href="contact.html" class="nav-link text-dark"><b>Contact</b></a>
                     </div>
                   </li>
                 </ul>
