--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -48,7 +48,7 @@
           </li>
           <li class="nav-item">
             <div class="btn">
-              <a href="" class="nav-link text-dark"><b>Product</b></a>
+              <a href="product.html" class="nav-link text-dark"><b>Product</b></a>
             </div>
           </li>
           <li class="nav-item">
@@ -58,7 +58,7 @@
           </li>
           <li class="nav-item">
             <div class="btn">
-              <a href="" class="nav-link text-dark"><b>Contact</b></a>
+              <a href="contact.html" class="nav-link text-dark"><b>Contact</b></a>
             </div>
           </li>
         </ul>
