--- a/practice/testimonial.html
+++ b/practice/testimonial.html
@@ -54,7 +54,7 @@
           </li>
           <li class="nav-item">
             <div class="btn">
-              <a href="" class="nav-link text-dark"><b>Product</b></a>
+              <a href="product.html" class="nav-link text-dark"><b>Product</b></a>
             </div>
           </li>
           <li class="nav-item">
@@ -64,7 +64,7 @@
           </li>
           <li class="nav-item">
             <div class="btn">
-              <a href="" class="nav-link text-dark"><b>Contact</b></a>
+              <a href="contact.html" class="nav-link text-dark"><b>Contact</b></a>
             </div>
           </li>
         </ul>
