--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -171,6 +171,120 @@
         </div>
       </div><br/>
       <div class="row mt-5">
+        <div class="col text-center">
+          <h1 class="display-4 fw-bold">Our <span class="text-danger">Products</span></h1>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col">
+            <div class="card-group">
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p1.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$75</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p2.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$80</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p3.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$68</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p4.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$68</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col">
+            <div class="card-group">
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p5.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$75</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p6.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$58</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p7.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$80</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p8.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$65</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col">
+            <div class="card-group">
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p9.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$35</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p10.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$50</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p11.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$63</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+              <div class="card border-1" style="width: 200px;">
+                <img src="https://themewagon.github.io/famms/images/p12.png" class="card-img-top px-5 pt-4" alt="">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Men's Shirt <span class="px-2">$78</span></h5>
+                    <a id="cart" href="#" class="btn btn-danger">Add To Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col text-center">
+              <a href="#" id="products" class="btn btn-danger px-4">View All Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
         <div id="subscribe" class="col" style="height: 350px;">
           <h1 class="text-capitalize text-center pt-5 mt-2">subscribe to get discount offers</h1>
           <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, accusantium?</p>
