--- a/practice/testimonial.html
+++ b/practice/testimonial.html
@@ -26,7 +26,7 @@
       integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="testimonial.css">
   </head>
 
   <body>
