--- a/practice/bootstrap.html
+++ b/practice/bootstrap.html
@@ -63,11 +63,11 @@
           </li>
         </ul>
       </div>
-      <div id="bgimg" class="row mh-100 align-content-start mt-5" style="height: 950px">
+      <div id="bgimg" class="row mh-100 align-content-start" style="height: 840px">
         <div class="col-md-8 text-center ml-5">
           <div
             id="carouselExampleControl"
-            class="carousel slide"
+            class="carousel slide mt-5"
             data-ride="carousel"
           >
             <div class="carousel-inner">
@@ -146,7 +146,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-5">
         <div class="col display-4 text-center fw-bold">Why Shop With Us</div>
       </div>
       <div class="row mt-5 justify-content-center">
