--- a/practice/del.html
+++ b/practice/del.html
@@ -57,5 +57,7 @@
                 ></span>
                 <span class="sr-only">previous</span>
               </a>
+              
+      <div class="row" id="photo" style="height: 800px;"></div>
     </body>
 </html>
